# funnel

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  prometheus.yml  rustfmt.toml
.github/workflows/: ci.yml  docker-publish.yml
config/: strfry.conf
crates/api/: Cargo.toml
crates/api/src/: auth.rs  handlers.rs  lib.rs  main.rs  router.rs  tests.rs
crates/clickhouse/: Cargo.toml
crates/clickhouse/src/: client.rs  error.rs  lib.rs  queries.rs  traits.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: lib.rs  main.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
deploy/: README.md  ansible.cfg  requirements.yml
deploy/group_vars/: all.yml  all.yml.example
deploy/inventory/: production.yml  staging.yml
deploy/playbooks/: deploy.yml  schema.yml  setup.yml
deploy/roles/base/tasks/: main.yml
deploy/roles/caddy/tasks/: main.yml
deploy/roles/caddy/templates/: Caddyfile.j2
deploy/roles/docker/tasks/: main.yml
deploy/roles/firewall/tasks/: main.yml
deploy/roles/users/tasks/: main.yml
deploy/templates/: env.j2
docs/: api.md  clickhouse-feedback.md  deployment.md  plan.md  schema.sql  schema_cloud.sql  schema_self_hosted.sql
