[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/clickhouse",
    "crates/ingestion",
    "crates/api",
    "crates/observability",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/example/funnel"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ClickHouse
clickhouse = { version = "0.13", features = ["lz4", "chrono"] }

# Nostr
nostr = "0.37"

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
funnel-proto = { path = "crates/proto" }
funnel-clickhouse = { path = "crates/clickhouse" }
funnel-observability = { path = "crates/observability" }
