[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/clickhouse",
    "crates/ingestion",
    "crates/api",
    "crates/observability",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT"
repository = "https://github.com/example/funnel"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ClickHouse
clickhouse = { version = "0.13", features = ["lz4", "chrono"] }

# Nostr
nostr = "0.37"

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
tokio-test = "0.4"
axum-test = "18"
mockall = "0.13"
wiremock = "0.6"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["clickhouse"] }

# Internal crates
funnel-proto = { path = "crates/proto" }
funnel-clickhouse = { path = "crates/clickhouse" }
funnel-observability = { path = "crates/observability" }
