[package]
name = "funnel-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST API server for Funnel"

[dependencies]
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
metrics.workspace = true
funnel-proto.workspace = true
funnel-clickhouse.workspace = true
funnel-observability.workspace = true

[[bin]]
name = "funnel-api"
path = "src/main.rs"
