[package]
name = "funnel-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST API server for Funnel"

[lib]
path = "src/lib.rs"

[[bin]]
name = "funnel-api"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
chrono.workspace = true
subtle = "2"
funnel-proto.workspace = true
funnel-clickhouse.workspace = true
funnel-observability.workspace = true

[dev-dependencies]
axum-test.workspace = true
tokio-test.workspace = true
