[package]
name = "funnel-ingestion"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nostr relay ingestion service for Funnel"

[lib]
path = "src/lib.rs"

[[bin]]
name = "funnel-ingestion"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
metrics.workspace = true
funnel-proto.workspace = true
funnel-clickhouse.workspace = true
funnel-observability.workspace = true

# Websocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
