[package]
name = "funnel-ingestion"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nostr relay ingestion service for Funnel"

[lib]
path = "src/lib.rs"

[[bin]]
name = "funnel-ingestion"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
metrics.workspace = true
funnel-proto.workspace = true
funnel-clickhouse.workspace = true
funnel-observability.workspace = true

# Nostr SDK for relay connections
nostr-sdk = { version = "0.44", default-features = false, features = ["all-nips"] }

# TLS crypto backend (required for rustls)
rustls = { version = "0.23", features = ["ring"] }
